<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.hypixel</groupId>
    <artifactId>NerdBot</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>25</java.version>
        <lombok.version>1.18.46</lombok.version>
        <imagegenerator.version>master-SNAPSHOT</imagegenerator.version>
        <editorconfig.encoding>UTF-8</editorconfig.encoding>
        <maven.compiler.release>${java.version}</maven.compiler.release>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.Aerhhh</groupId>
                <artifactId>MinecraftImageGenerator</artifactId>
                <version>${imagegenerator.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>discord-framework</module>
        <module>app</module>
        <module>tooling</module>
    </modules>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>
